--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -557,6 +557,7 @@ jobs:
           RdkServicesL2Test &&
           cp -rf $(pwd)/rdkL2TestResults.json $GITHUB_WORKSPACE/rdkL2TestResultsWithoutValgrind.json &&
           rm -rf $(pwd)/rdkL2TestResults.json
+          ldd libWPEFrameworkMaintenanceManager.so
 
       - name: Run unit tests with valgrind
         if: ${{ !env.ACT }}
