--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -558,7 +558,7 @@ jobs:
           cp -rf $(pwd)/rdkL2TestResults.json $GITHUB_WORKSPACE/rdkL2TestResultsWithoutValgrind.json &&
           rm -rf $(pwd)/rdkL2TestResults.json && 
           cd /home/runner/work/entservices-softwareupdate/entservices-softwareupdate/install/usr/lib/wpeframework/plugins/ && 
-          ldd libWPEFrameworkMaintenanceManager.so > fgh.txt &&
+          ldd RdkServicesL2Test > fgh.txt &&
           cat fgh.txt &&
           cd -
       - name: Run unit tests with valgrind
