--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -558,11 +558,7 @@ jobs:
           LD_LIBRARY_PATH=$GITHUB_WORKSPACE/install/usr/lib:$GITHUB_WORKSPACE/install/usr/lib/wpeframework/plugins:${LD_LIBRARY_PATH}
           RdkServicesL2Test &&
           cp -rf $(pwd)/rdkL2TestResults.json $GITHUB_WORKSPACE/rdkL2TestResultsWithoutValgrind.json &&
-          rm -rf $(pwd)/rdkL2TestResults.json && 
-          cd /home/runner/work/entservices-softwareupdate/entservices-softwareupdate/install/usr/bin && 
-          ldd RdkServicesL2Test > fgh.txt &&
-          cat fgh.txt &&
-          cd -
+          rm -rf $(pwd)/rdkL2TestResults.json 
       - name: Run unit tests with valgrind
         if: ${{ !env.ACT }}
         run: >
