--- a/MaintenanceManager/CMakeLists.txt
+++ b/MaintenanceManager/CMakeLists.txt
@@ -21,8 +21,8 @@ set(MODULE_NAME ${NAMESPACE}${PLUGIN_NAME})
 set(PLUGIN_MAINTENANCEMGR_STARTUPORDER "" CACHE STRING "To configure startup order of MaintenanceManager plugin")
 
 find_package(${NAMESPACE}Plugins REQUIRED)
-#add_library(${MODULE_NAME} SHARED
-add_executable(${MODULE_NAME}
+#add_executable(${MODULE_NAME}
+add_library(${MODULE_NAME} SHARED
         MaintenanceManager.cpp
         Module.cpp)
 
