--- a/MaintenanceManager/CMakeLists.txt
+++ b/MaintenanceManager/CMakeLists.txt
@@ -22,7 +22,8 @@ set(PLUGIN_MAINTENANCEMGR_STARTUPORDER "" CACHE STRING "To configure startup ord
 
 find_package(${NAMESPACE}Plugins REQUIRED)
 #add_executable(${MODULE_NAME}
-add_library(${MODULE_NAME} SHARED
+#add_library(${MODULE_NAME} SHARED
+add_executable(${MODULE_NAME}
         MaintenanceManager.cpp
         Module.cpp)
 
