--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -330,7 +330,7 @@ jobs:
           -fprofile-arcs
           -ftest-coverage
           -DUSE_THUNDER_R4=ON
-          -DGTEST_ENABLE
+          -DGTEST_ENABLE=OFF
           -DTHUNDER_VERSION=4
           -DTHUNDER_VERSION_MAJOR=4
           -DTHUNDER_VERSION_MINOR=4
