--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -387,6 +387,25 @@ jobs:
           cmake --build build/entservices-softwareupdate -j8
           &&
           cmake --install build/entservices-softwareupdate
+      - name: Build Network manager
+        run: >
+          cmake
+          -S "${{github.workspace}}/networkmanager"
+          -B build/networkmanager_rdk
+          -DCMAKE_TOOLCHAIN_FILE="${{ env.TOOLCHAIN_FILE }}"
+          -DCMAKE_INSTALL_PREFIX="${{github.workspace}}/install/usr"
+          -DCMAKE_MODULE_PATH="${{github.workspace}}/install/tools/cmake"
+          -DCMAKE_CXX_FLAGS="
+          -I ${{github.workspace}}/networkmanager/tests/headers
+          -I ${{github.workspace}}/networkmanager/tests/headers/rdk/iarmbus
+          --include ${{github.workspace}}/networkmanager/tests/mocks/Iarm.h
+          --include ${{github.workspace}}/networkmanager/tests/mocks/secure_wrappermock.h
+          -Wall --coverage
+          "
+          -DENABLE_UNIT_TESTING=ON
+          -DENABLE_ROUTER_DISCOVERY_TOOL=OFF
+          &&
+          cmake --build build/networkmanager_rdk --target install -j8
 
       - name: Build entservices-testframework
         run: >
