--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -136,6 +136,7 @@ jobs:
         run: |  
             cd $GITHUB_WORKSPACE/entservices-softwareupdate
             patch -p1 < $GITHUB_WORKSPACE/entservices-testframework/patches/Firmware_postFlash.patch
+            patch -p1 < $GITHUB_WORKSPACE/entservices-testframework/patches/maintenancemanager.patch
             cd -
 
       - name: Build ThunderTools
