--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -326,13 +326,13 @@ jobs:
           -S "$GITHUB_WORKSPACE/networkmanager/legacy"
           -B build/networkmanager_rdk
           -DCMAKE_TOOLCHAIN_FILE="${{ env.TOOLCHAIN_FILE }}"
-          -DCMAKE_INSTALL_PREFIX="${{github.workspace}}/install/usr"
-          -DCMAKE_MODULE_PATH="${{github.workspace}}/install/tools/cmake"
+          -DCMAKE_INSTALL_PREFIX="$GITHUB_WORKSPACE/install/usr"
+          -DCMAKE_MODULE_PATH="$GITHUB_WORKSPACE/install/tools/cmake"
           -DCMAKE_CXX_FLAGS="
           -I ${{github.workspace}}/networkmanager/tests/headers
           -I ${{github.workspace}}/networkmanager/tests/headers/rdk/iarmbus
-          --include ${{github.workspace}}/networkmanager/tests/mocks/Iarm.h
-          --include ${{github.workspace}}/networkmanager/tests/mocks/secure_wrappermock.h
+          --include $GITHUB_WORKSPACE/networkmanager/tests/mocks/Iarm.h
+          --include $GITHUB_WORKSPACE/networkmanager/tests/mocks/secure_wrappermock.h
           -Wall --coverage
           "
           -DENABLE_UNIT_TESTING=ON
