--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -329,8 +329,8 @@ jobs:
           -DCMAKE_INSTALL_PREFIX="$GITHUB_WORKSPACE/install/usr"
           -DCMAKE_MODULE_PATH="$GITHUB_WORKSPACE/install/tools/cmake"
           -DCMAKE_CXX_FLAGS="
-          -I ${{github.workspace}}/networkmanager/tests/headers
-          -I ${{github.workspace}}/networkmanager/tests/headers/rdk/iarmbus
+          -I $GITHUB_WORKSPACE/networkmanager/tests/headers
+          -I $GITHUB_WORKSPACE/networkmanager/tests/headers/rdk/iarmbus
           --include $GITHUB_WORKSPACE/networkmanager/tests/mocks/Iarm.h
           --include $GITHUB_WORKSPACE/networkmanager/tests/mocks/secure_wrappermock.h
           -Wall --coverage
