--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -319,6 +319,34 @@ jobs:
           cmake --build build/mocks -j8
           &&
           cmake --install build/mocks
+      
+      - name: Build networkmanager legacy 111
+        run: |
+          # Configure networkmanager
+          cmake \
+          -S "$GITHUB_WORKSPACE/networkmanager/legacy" \
+          -B build/networkmanager_rdk \
+          -DCMAKE_TOOLCHAIN_FILE="${{ env.TOOLCHAIN_FILE }}" \
+          -DCMAKE_INSTALL_PREFIX="$GITHUB_WORKSPACE/install/usr" \
+          -DCMAKE_PREFIX_PATH="$GITHUB_WORKSPACE/install/usr" \
+          -DCMAKE_MODULE_PATH="$GITHUB_WORKSPACE/install/tools/cmake" \
+          -DCMAKE_CXX_FLAGS="
+          -I $GITHUB_WORKSPACE/networkmanager/tests/headers
+          -I $GITHUB_WORKSPACE/networkmanager/tests/headers/rdk/iarmbus
+          --include $GITHUB_WORKSPACE/networkmanager/tests/mocks/Iarm.h
+          --include $GITHUB_WORKSPACE/networkmanager/tests/mocks/secure_wrappermock.h
+          -Wall --coverage
+          " \
+          -DENABLE_UNIT_TESTING=ON \
+          -DENABLE_ROUTER_DISCOVERY_TOOL=OFF
+
+          # Build
+          cmake --build build/networkmanager_rdk -j8
+
+          # Install
+          cmake --install build/networkmanager_rdk
+ 
+        
           
       - name: Build networkmanager with RDK Proxy
         run: >
