--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -340,6 +340,7 @@ jobs:
 
           # Install
           cmake --install build/networkmanager_rdk
+          cat /home/runner/work/entservices-softwareupdate/entservices-softwareupdate/install/usr/../etc/WPEFramework/plugins/LegacyNetworkAPIs.json
  
       - name: Build entservices-softwareupdate
         run: >
