--- a/Tests/L2Tests/tests/MockNetwork/CMakeLists.txt
+++ b/Tests/L2Tests/tests/MockNetwork/CMakeLists.txt
@@ -33,7 +33,7 @@ add_library(${MODULE_NAME} SHARED
 )
 
 # Include directories
-target_include_directories(${MODULE_NAME} PRIVATE ${IARMBUS_INCLUDE_DIRS} ../../../helpers ../../Tests/mocks )
+target_include_directories(${MODULE_NAME} PRIVATE ${IARMBUS_INCLUDE_DIRS} ../../../helpers ../../Tests/mocks /home/runner/work/entservices-softwareupdate/entservices-softwareupdate/entservices-testframework/Tests/mocks)
 
 # Link libraries
 target_link_libraries(${MODULE_NAME}
