--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -115,7 +115,7 @@ jobs:
         with:
           repository: rdkcentral/networkmanager
           path: networkmanager
-          ref: feature/L2mock
+          ref: feature/nwbuild
           token: ${{ secrets.RDKCM_RDKE }}
 
       - name: Checkout googletest
