--- a/Tests/L2Tests/tests/MockNetwork/MockNetworkPlugin.config
+++ b/Tests/L2Tests/tests/MockNetwork/MockNetworkPlugin.config
@@ -1,14 +1,4 @@
-set(autostart ${PLUGIN_NETWORK_AUTOSTART})
-
-if(PLUGIN_NETWORK_STARTUPORDER)
-set (startuporder ${PLUGIN_NETWORK_STARTUPORDER})
-endif()
-
-map()
-   key(root)
-   map()
-       kv(mode ${PLUGIN_DUMMYPLUGIN_MODE})
-       kv(locator lib${PLUGIN_IMPLEMENTATION}.so)
-   end()
-end()
-ans(configuration)
+set (autostart true)
+set (preconditions Platform)
+set (callsign "org.rdk.Network")
+set (startuporder ${PLUGIN_LEGACY_NW_STARTUPORDER})
