--- a/Tests/L2Tests/tests/MockNetwork/MockNetworkPlugin.conf.in
+++ b/Tests/L2Tests/tests/MockNetwork/MockNetworkPlugin.conf.in
@@ -1,11 +1,4 @@
-autostart = "@PLUGIN_NETWORK_AUTOSTART@"
 precondition = ["Platform"]
 callsign = "org.rdk.Network"
-startuporder = "@PLUGIN_NETWORK_STARTUPORDER@"
-
-configuration = JSON()
-rootobject = JSON()
-
-rootobject.add("mode", "@PLUGIN_DUMMYPLUGIN_MODE@")
-rootobject.add("locator", "lib@PLUGIN_IMPLEMENTATION@.so")
-configuration.add("root", rootobject)
+autostart = "true"
+startuporder = "@PLUGIN_LEGACY_NW_STARTUPORDER@"
