--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -385,8 +385,10 @@ jobs:
           cmake --install build/entservices-softwareupdate
           &&
           cat /home/runner/work/entservices-softwareupdate/entservices-softwareupdate/install/usr/../etc/WPEFramework/plugins/LegacyWiFiManagerAPIs.json
-
-        
+          &&
+          cp /home/runner/work/entservices-softwareupdate/entservices-softwareupdate/install/usr/../etc/WPEFramework/plugins/LegacyWiFiManagerAPIs.json /home/runner/work/entservices-softwareupdate/entservices-softwareupdate/install/usr/../etc/WPEFramework/plugins/Network.json
+          &&
+          cat /home/runner/work/entservices-softwareupdate/entservices-softwareupdate/install/usr/../etc/WPEFramework/plugins/Network.json
 
       - name: Build entservices-testframework
         run: >
