--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -136,7 +136,8 @@ jobs:
         run: |  
             cd $GITHUB_WORKSPACE/entservices-softwareupdate
             patch -p1 < $GITHUB_WORKSPACE/entservices-testframework/patches/Firmware_postFlash.patch
-            cd -
+            patch -p1 < $GITHUB_WORKSPACE/entservices-testframework/patches/Maintenancemanager.patch
+
 
       - name: Build ThunderTools
         run: >
