--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -649,6 +649,8 @@ jobs:
           -o coverage
           -t "entservices-softwareupdate coverage"
           filtered_coverage.info
+          &&
+          lcov --extract filtered_coverage.info "*/MaintenanceManager/MaintenanceManager.cpp" -o maintenancemanager_coverage.info
 
       - name: Upload artifacts
         if: ${{ !env.ACT }}
