--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -115,7 +115,7 @@ jobs:
         with:
           repository: rdkcentral/networkmanager
           path: networkmanager
-          ref: feature/nwbuild
+          ref: develop
           token: ${{ secrets.RDKCM_RDKE }}
 
       - name: Checkout googletest
@@ -137,6 +137,11 @@ jobs:
             cd $GITHUB_WORKSPACE/entservices-softwareupdate
             patch -p1 < $GITHUB_WORKSPACE/entservices-testframework/patches/Firmware_postFlash.patch
             patch -p1 < $GITHUB_WORKSPACE/entservices-testframework/patches/Maintenancemanager.patch
+
+      - name: Apply patches entservices-softwareupdate
+        run: |  
+            cd $GITHUB_WORKSPACE/networkmanager
+            patch -p1 < $GITHUB_WORKSPACE/entservices-testframework/patches/Networkmanager.patch
 
 
       - name: Build ThunderTools
