--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -138,7 +138,7 @@ jobs:
             patch -p1 < $GITHUB_WORKSPACE/entservices-testframework/patches/Firmware_postFlash.patch
             patch -p1 < $GITHUB_WORKSPACE/entservices-testframework/patches/Maintenancemanager.patch
 
-      - name: Apply patches entservices-softwareupdate
+      - name: Apply patches Network manager
         run: |  
             cd $GITHUB_WORKSPACE/networkmanager
             patch -p1 < $GITHUB_WORKSPACE/entservices-testframework/patches/Networkmanager.patch
