--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,8 @@ include(CmakeHelperFunctions)
 
 if(RDK_SERVICE_L2_TEST)
     add_subdirectory(Tests/L2Tests)
+    add_subdirectory(Tests/L2Tests/tests/MockAuthService)
+    add_subdirectory(Tests/L2Tests/tests/MockSecManager)
 endif()
 
 option(DISABLE_SECURITY_TOKEN "Disable security token" OFF)
