--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -107,7 +107,7 @@ jobs:
         with:
           repository: rdkcentral/entservices-testframework
           path: entservices-testframework
-          ref: feature/L2mm_test_setup_refined
+          ref: feature/RDK-57739_test
           token: ${{ secrets.RDKCM_RDKE }}
           
       - name: Checkout networkmanager
