RDKEMW-7762: Create a skeleton plugin for FirmwareDownload
Reason for change: Created a FirmwareDownload plugin.
Test Procedure: Test - All the FirmwareDownload APIs.
Risks: Low
Priority: P1
Version: Major
Signed-off-by:Dineshkumar P [dinesh_kumar2@comcast.com]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,10 @@ if(PLUGIN_MAINTENANCEMANAGER)
     add_subdirectory(MaintenanceManager)
 endif()
 
+if(PLUGIN_FIRMWAREDOWNLOAD)
+    add_subdirectory(FirmwareDownload)
+endif()
+
 if(WPEFRAMEWORK_CREATE_IPKG_TARGETS)
     set(CPACK_GENERATOR "DEB")
     set(CPACK_DEB_COMPONENT_INSTALL ON)
