Add safe directory configuration for Git

--- a/.github/workflows/native_full_build.yml
+++ b/.github/workflows/native_full_build.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Mark repo as safe for git
+        run: git config --global --add safe.directory /__w/entservices-softwareupdate/entservices-softwareupdate
 
       - name: native build
         run: |
