--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -7,6 +7,11 @@ on:
         description: "Specifies the source type (e.g., local or test framework) for the workflow."
         required: true
         type: string
+      use_containers:
+        description: "Enable container isolation (disable for act local runs)"
+        required: false
+        type: boolean
+        default: true
     secrets:
       RDKCM_RDKE:
         required: true
@@ -22,6 +27,8 @@ jobs:
   L1-tests:
     name: Build and run unit tests
     runs-on: ubuntu-22.04
+    container: ${{ inputs.use_containers && fromJSON('{"image":"ubuntu:22.04","options":"--cap-add=SYS_PTRACE --security-opt seccomp=unconfined"}') || null }}
+
     strategy:
       matrix:
         compiler: [ gcc, clang ]
@@ -65,11 +72,26 @@ jobs:
             !thunder/install/usr/lib/wpeframework/plugins
           key: ${{ runner.os }}-${{ env.THUNDER_REF }}-${{ env.INTERFACES_REF }}-4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-      - run: pip install jsonref
+      - name: Install container dependencies
+        if: ${{ inputs.use_containers }}
+        run: |
+          apt-get update
+          apt-get install -y git curl sudo psmisc python3 python3-pip
+          pip3 install jsonref
+          
+      - name: Pre-test cleanup
+        if: ${{ inputs.use_containers }}
+        run: |
+          echo "=== Cleaning up previous test artifacts ==="
+          pkill -9 -f WPEFramework || true
+          pkill -9 -f Thunder || true
+          pkill -9 -f RdkServicesL1Test || true
+          fuser -k 55555/tcp || true
+          fuser -k 9998/tcp || true
+          rm -rf /tmp/thunder_* || true
+          rm -rf /tmp/communicator* || true
+          sleep 2
+          echo "=== Cleanup complete ==="
 
       - name: ACK External Trigger
         run: |
