--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -713,3 +713,12 @@ jobs:
             rdkL1TestResultsWithoutValgrind.json
             rdkL1TestResultsWithValgrind.json
           if-no-files-found: warn
+
+        # The below steps are for uploading full build results for debugging purposes.
+      - name: Upload build
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+         name: BuildL1 results
+         path: |
+          ./    
