--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -683,4 +683,12 @@ jobs:
             rdkL2TestResultsWithoutValgrind.json
             rdkL2TestResultsWithValgrind.json
           if-no-files-found: warn
-          
+
+        # The below steps are for uploading full build results for debugging purposes.
+      - name: Upload build
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+         name: BuildL2 results
+         path: |
+          ./    
