--- a/.github/workflows/L2-tests.yml
+++ b/.github/workflows/L2-tests.yml
@@ -606,7 +606,7 @@ jobs:
         run: >
           PATH=$GITHUB_WORKSPACE/install/usr/bin:${PATH}
           LD_LIBRARY_PATH=$GITHUB_WORKSPACE/install/usr/lib:$GITHUB_WORKSPACE/install/usr/lib/wpeframework/plugins:${LD_LIBRARY_PATH}
-          gdb -batch -ex "set logging file $GITHUB_WORKSPACE/gdb_log.txt" -ex "set logging on" -ex "run" -ex "bt" -ex "info registers" -ex "quit" --args RdkServicesL2Test 2>&1 | tee $GITHUB_WORKSPACE/gdb_output.log &&
+          RdkServicesL2Test &&
           cp -rf $(pwd)/rdkL2TestResults.json $GITHUB_WORKSPACE/rdkL2TestResultsWithoutValgrind.json &&
           rm -rf $(pwd)/rdkL2TestResults.json
 
@@ -622,22 +622,9 @@ jobs:
           --show-reachable=yes
           --track-fds=yes
           --fair-sched=try
-          gdb -batch -ex "set logging file $GITHUB_WORKSPACE/gdb_log.txt" -ex "set logging on" -ex "run" -ex "bt" -ex "info registers" -ex "quit" --args RdkServicesL2Test 2>&1 | tee $GITHUB_WORKSPACE/gdb_output.log &&
+          RdkServicesL2Test &&
           cp -rf $(pwd)/rdkL2TestResults.json $GITHUB_WORKSPACE/rdkL2TestResultsWithValgrind.json &&
           rm -rf $(pwd)/rdkL2TestResults.json
-
-      - name: Capture detailed crash info on failure
-        if: failure()
-        run: |
-          echo "Test failed, capturing additional debugging information..."
-          echo "Core dumps:" >> $GITHUB_WORKSPACE/debug_info.log
-          find . -name "core*" -type f >> $GITHUB_WORKSPACE/debug_info.log 2>/dev/null || echo "No core dumps found" >> $GITHUB_WORKSPACE/debug_info.log
-          echo "System info:" >> $GITHUB_WORKSPACE/debug_info.log
-          uname -a >> $GITHUB_WORKSPACE/debug_info.log
-          echo "Memory info:" >> $GITHUB_WORKSPACE/debug_info.log
-          free -h >> $GITHUB_WORKSPACE/debug_info.log
-          echo "Disk space:" >> $GITHUB_WORKSPACE/debug_info.log
-          df -h >> $GITHUB_WORKSPACE/debug_info.log    
     
       - name: Generate coverage
         if: ${{ matrix.coverage == 'with-coverage' && !env.ACT }}
@@ -677,18 +664,7 @@ jobs:
           path: |
             coverage/
             valgrind_log
-            gdb_log.txt       # (GDB's internal logging)
-            gdb_output.log    # (captured terminal output)
-            debug_info.log    # (system info on failure)
             rdkL2TestResultsWithoutValgrind.json
             rdkL2TestResultsWithValgrind.json
           if-no-files-found: warn
 
-        # The below steps are for uploading full build results for debugging purposes.
-      - name: Upload build
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-         name: BuildL2 results
-         path: |
-          ./    
