--- a/.github/workflows/L1-tests.yml
+++ b/.github/workflows/L1-tests.yml
@@ -637,10 +637,10 @@ jobs:
           PATH=$GITHUB_WORKSPACE/install/usr/bin:${PATH}
           LD_LIBRARY_PATH=$GITHUB_WORKSPACE/install/usr/lib:$GITHUB_WORKSPACE/install/usr/lib/wpeframework/plugins:${LD_LIBRARY_PATH}
           GTEST_OUTPUT="json:$(pwd)/rdkL1TestResults.json"
-          gdb -batch -ex "set logging file $GITHUB_WORKSPACE/gdb_log.txt" -ex "set logging on" -ex "run" -ex "bt" -ex "info registers" -ex "quit" --args RdkServicesL1Test 2>&1 | tee $GITHUB_WORKSPACE/gdb_output.log &&
+          RdkServicesL1Test &&
           cp -rf $(pwd)/rdkL1TestResults.json $GITHUB_WORKSPACE/rdkL1TestResultsWithoutValgrind.json &&
           rm -rf $(pwd)/rdkL1TestResults.json
-     
+
       - name: Run unit tests with valgrind
         if: ${{ !env.ACT }}
         run: >
@@ -654,22 +654,9 @@ jobs:
           --show-reachable=yes
           --track-fds=yes
           --fair-sched=try
-          gdb -batch -ex "set logging file $GITHUB_WORKSPACE/gdb_log.txt" -ex "set logging on" -ex "run" -ex "bt" -ex "info registers" -ex "quit" --args RdkServicesL1Test 2>&1 | tee $GITHUB_WORKSPACE/gdb_output.log &&
+          RdkServicesL1Test &&
           cp -rf $(pwd)/rdkL1TestResults.json $GITHUB_WORKSPACE/rdkL1TestResultsWithValgrind.json &&
           rm -rf $(pwd)/rdkL1TestResults.json
-
-      - name: Capture detailed crash info on failure
-        if: failure()
-        run: |
-          echo "Test failed, capturing additional debugging information..."
-          echo "Core dumps:" >> $GITHUB_WORKSPACE/debug_info.log
-          find . -name "core*" -type f >> $GITHUB_WORKSPACE/debug_info.log 2>/dev/null || echo "No core dumps found" >> $GITHUB_WORKSPACE/debug_info.log
-          echo "System info:" >> $GITHUB_WORKSPACE/debug_info.log
-          uname -a >> $GITHUB_WORKSPACE/debug_info.log
-          echo "Memory info:" >> $GITHUB_WORKSPACE/debug_info.log
-          free -h >> $GITHUB_WORKSPACE/debug_info.log
-          echo "Disk space:" >> $GITHUB_WORKSPACE/debug_info.log
-          df -h >> $GITHUB_WORKSPACE/debug_info.log    
 
       - name: Generate coverage
         if: ${{ matrix.coverage == 'with-coverage' && !env.ACT }}
@@ -708,18 +695,6 @@ jobs:
           path: |
             coverage/
             valgrind_log
-            gdb_log.txt       # (GDB's internal logging)
-            gdb_output.log    # (captured terminal output)
-            debug_info.log    # (system info on failure)
             rdkL1TestResultsWithoutValgrind.json
             rdkL1TestResultsWithValgrind.json
           if-no-files-found: warn
-
-        # The below steps are for uploading full build results for debugging purposes.
-      - name: Upload build
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-         name: BuildL1 results
-         path: |
-          ./    
